# minimal-cmake-vcpkg-imgui-example

./: .gitignore  CMakeLists.txt
src/: main.cpp
